# image_processing

./: .gitignore
face_recognition/: face_recog.py  pyproject.toml
make_bouding_box/: app.py  app_show_image.py  compare_full_vs_crop.py  download_voc2007.py  draw_bd.py  draw_bd_difficulty.py  draw_segmentation.py  pyproject.toml  selective_search.py  simple_inference.py  voc_xml_parse.py
